# squawk7700

./: .gitignore  CLAUDE.md  Cargo.toml  compose.yml  squawk7700.db
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/application/: ports.rs
backend/src/application/use_cases/: get_aircraft_track.rs  mod.rs
backend/src/domain/: aircraft.rs  mod.rs  position.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/config/: test.rs
backend/src/infrastructure/db/: sqlite_repository.rs
backend/src/infrastructure/http/: mod.rs
backend/src/infrastructure/web/: error.rs  handlers.rs  mod.rs  server.rs
src/: main.rs
src/application/: ports.rs  use_cases.rs
src/domain/: aircraft.rs  error.rs  mod.rs  registration.rs
src/infrastructure/db/: sqlite_repository.rs
src/infrastructure/http/: adsb_client.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: TrackMap.svelte  airports.ts  api.ts  types.ts
web/src/routes/: +page.svelte
